<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    tools:context=".Main2Activity"
    tools:showIn="@layout/activity_main2"
    android:id="@+id/HomeCalendar"
    android:weightSum="1">

    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/appbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    <TextView
        android:id="@+id/Bienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Calendarios"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/Calendario_sem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Presentacion_semetral"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/Presentacion_ordinaria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Presentacion_ordinario"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/Presentacion_extraordinaria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Presentacion_extraordinario"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/Presentacion_ETS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Presentacion_ets"/>
    <!-- Resto de la interfaz de usuario -->




    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="404dp"
        android:layout_above="@+id/navigation"
        android:animateLayoutChanges="true"
        android:layout_weight="1.14">

    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bb_darkBackgroundColor"
        app:itemIconTint="@color/upiita_dorado"
        app:itemTextColor="@color/colorWhite"
        app:menu="@menu/bottom_navigation_items"/>


</LinearLayout>